--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <!-- login.html -->
 <!-- Programmé par : Maxime Lacroix-Lemire -->
-<!-- Dernière Mise À  Jour :  2021/03/31 -->
+<!-- Dernière Mise À  Jour :  2021/04/14 -->
 
 <!DOCTYPE html>
 <html lang="fr-ca">
@@ -32,11 +32,6 @@
               <ul class="navbar-nav">
                 <li class="nav-item active">
                   <a class="nav-link text-warning" href="index.html">Accueil</a>
-                </li>                
-                <li class="nav-item">
-                  <a class="nav-link text-warning" href=""
-                    >À propos</a
-                  >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-warning" href="contact.html">Contact</a>
@@ -70,6 +65,51 @@
             </div>
         </div>
     </section>
+    <section>
+      <div class="container">
+          <div class="row">
+              <div class="col-12 text-center">                    
+                  <div class="wrapper" data-toggle="modal" data-target="#monModal">
+                      <button class="btn btn-primary"> À propos</button>
+                  </div>
+              </div>
+              <div class="modal" tabindex="-1" role="dialog" id="monModal">
+                  <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                          <div class="modal-header">
+                              <h5 class="modal-title">À Propos</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                              </button>
+                          </div>
+                          <div class="modal-body card">
+                              <p class="card">
+                                  Site Web spécialisé en finance personnelle et pour la famille. En moins de 20 minutes, Budget Max vous guide dans la création de votre budget personnalisé à travers une interface simple, moderne et intuitive.
+                              </p>
+                              <ul class="card">
+                                  <li>
+                                      Taille de l'entreprise = 10 personnes
+                                  </li>
+                                  <li>
+                                      Domaine d'activité = Finance
+                                  </li>
+                                  <li>
+                                      Siège Social = Sainte-Martine, Québec
+                                  </li>
+                                  <li>
+                                      PDG de le compagnie = Maxime Lacroix-Lemire
+                                  </li>
+                              </ul>
+                          </div>
+                          <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
     <section>
         <div class="container">
             <div class="row">
