--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
-<!-- index.html -->
+<!-- contact.html -->
 <!-- Programmé par : Maxime Lacroix-Lemire -->
-<!-- Dernière Mise À  Jour :  2021/03/31 -->
+<!-- Dernière Mise À  Jour :  2021/04/14 -->
 
 <!DOCTYPE html>
 <html lang="fr-ca">
@@ -33,11 +33,6 @@
               <ul class="navbar-nav">
                 <li class="nav-item active">
                   <a class="nav-link text-warning" href="index.html">Accueil</a>
-                </li>                
-                <li class="nav-item">
-                  <a class="nav-link text-warning" href=""
-                    >À propos</a
-                  >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-warning" href="contact.html">Contact</a>
@@ -92,6 +87,51 @@
     <section>
         <div class="container">
             <div class="row">
+                <div class="col-12 text-center">                    
+                    <div class="wrapper" data-toggle="modal" data-target="#monModal">
+                        <button class="btn btn-primary"> À propos</button>
+                    </div>
+                </div>
+                <div class="modal" tabindex="-1" role="dialog" id="monModal">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">À Propos</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body card">
+                                <p class="card">
+                                    Site Web spécialisé en finance personnelle et pour la famille. En moins de 20 minutes, Budget Max vous guide dans la création de votre budget personnalisé à travers une interface simple, moderne et intuitive.
+                                </p>
+                                <ul class="card">
+                                    <li>
+                                        Taille de l'entreprise = 10 personnes
+                                    </li>
+                                    <li>
+                                        Domaine d'activité = Finance
+                                    </li>
+                                    <li>
+                                        Siège Social = Sainte-Martine, Québec
+                                    </li>
+                                    <li>
+                                        PDG de le compagnie = Maxime Lacroix-Lemire
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                              </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
                 <div class="col-12 text-center">
                     <a href="inscription.html" class="btn-danger">Inscription</a>
                 </div>
@@ -99,82 +139,83 @@
         </div>
     </section>
 </body>
-<script>
-        // Menu Déroulant Contact
-    var select = document.getElementById("array");
-    var elmts = ["Commentaires général", "Problème technique à l'installation", "Problème technique lors d'une Mise à jour", "Problème technique général"];
-
-        for (var compteur = 0; compteur < elmts.length; compteur++) {
-            var optn = elmts[compteur];
-            var el = document.createElement("option");
-            el.textContent = optn;
-            el.value = optn;
-            select.appendChild(el);
-        }
-
-    // Menu Déroulant Inscription
-
-
-    // Validation du formulaire Inscription
-
-    function validation() {
-        var isValid = true;
-        var error = "";
-
-        //Test Email [a-z - A-Z ]
-        if ( !document.getElementById("email").value && !document.getElementById("email").value.match(/^([a-z@A-Z ]+)$/)
-        ) {
-        isValid = false;
-        error = error + "Email non valide ";
-        }
-
-        //Test commentaire [a-z - A-Z ]
-        if ( !document.getElementById("commentaire").value)
-        {
-        isValid = false;
-        error = error + " Veuillez écrire un commentaire";
-        }
-
-        //Affichage du resultat de la validation
-        if (isValid) {
-        //paiement est un succes
-        alert("Message envoyé");
-        } else {
-        //un erreur c'est produite
-        alert (error);
-        }
-    }
-
-    // Validation du formulaire Contact
-
-    function validation() {
-        var isValid = true;
-        var error = "";
-
-        //Test Email [a-z - A-Z ]
-        if ( !document.getElementById("email").value && !document.getElementById("email").value.match(/^([a-z]@[a-z].[a-z]+)$/))
-        {
-        isValid = false;
-        error = error + "Email non valide ";
-        }
-
-        //Test commentaire [a-z - A-Z ]
-        if ( !document.getElementById("commentaire").value)
-        {
-        isValid = false;
-        error = error + " Veuillez écrire un commentaire";
-        }
-
-        //Affichage du resultat de la validation
-        if (isValid) {
-        //paiement est un succes
-        alert("Message envoyé");
-        } else {
-        //un erreur c'est produite
-        alert (error);
-        }
-    }
-</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="bootstrap/js/bootstrap.js"></script>
 </html>
+
+<script>
+    // Menu Déroulant Contact
+var select = document.getElementById("array");
+var elmts = ["Commentaires général", "Problème technique à l'installation", "Problème technique lors d'une Mise à jour", "Problème technique général"];
+
+    for (var compteur = 0; compteur < elmts.length; compteur++) {
+        var optn = elmts[compteur];
+        var el = document.createElement("option");
+        el.textContent = optn;
+        el.value = optn;
+        select.appendChild(el);
+    }
+
+// Menu Déroulant Inscription
+
+
+// Validation du formulaire Inscription
+
+function validation() {
+    var isValid = true;
+    var error = "";
+
+    //Test Email [a-z - A-Z ]
+    if ( !document.getElementById("email").value && !document.getElementById("email").value.match(/([a-z]@[a-z].[a-z])/)
+    ) {
+    isValid = false;
+    error = error + "Email non valide </br> ";
+    }
+
+    //Test commentaire
+    if ( !document.getElementById("commentaire").value)
+    {
+    isValid = false;
+    error = error + "Veuillez écrire un commentaire";
+    }
+
+    //Affichage du resultat de la validation
+    if (isValid) {
+    //paiement est un succes
+    alert("Message envoyé");
+    } else {
+    //un erreur c'est produite
+    document.getElementById("erreur").innerHTML = error;
+    }
+}
+
+// Validation du formulaire Contact
+
+function validation() {
+    var isValid = true;
+    var error = "";
+
+    //Test Email [a-z - A-Z ]
+    if ( !document.getElementById("email").value && !document.getElementById("email").value.match(/^([a-z]@[a-z].[a-z]+)$/))
+    {
+    isValid = false;
+    error = error + "Email non valide ";
+    }
+
+    //Test commentaire [a-z - A-Z ]
+    if ( !document.getElementById("commentaire").value)
+    {
+    isValid = false;
+    error = error + " Veuillez écrire un commentaire";
+    }
+
+    //Affichage du resultat de la validation
+    if (isValid) {
+    //paiement est un succes
+    alert("Message envoyé");
+    } else {
+    //un erreur c'est produite
+    document.getElementById("erreur").innerHTML = error;
+    }
+}
+</script>
