--- a/inscription.html
+++ b/inscription.html
@@ -1,6 +1,6 @@
-<!-- index.html -->
+<!-- inscription.html -->
 <!-- Programmé par : Maxime Lacroix-Lemire -->
-<!-- Dernière Mise À  Jour :  2021/03/31 -->
+<!-- Dernière Mise À  Jour :  2021/04/14 -->
 
 <!DOCTYPE html>
 <html lang="fr-ca">
@@ -32,11 +32,6 @@
               <ul class="navbar-nav">
                 <li class="nav-item active">
                   <a class="nav-link text-warning" href="index.html">Accueil</a>
-                </li>                
-                <li class="nav-item">
-                  <a class="nav-link text-warning" href=""
-                    >À propos</a
-                  >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-warning" href="contact.html">Contact</a>
